--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,15 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+#Queue
+- regex: 'Queue(?:/(\d+[\.\d]+))?'
+  name: 'Queue'
+  version: '$1'
+  engine:
+    default: 'WebKit'
+    versions:
+      28: 'Blink'
+      
 # Microsoft Edge (newer versions of IE)
 - regex: 'Edge[ /](\d+[\.\d]+)'
   name: 'Microsoft Edge'
